apps/harbor/middleware-upload.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: harbor-upload
  namespace: harbor
spec:
  buffering:
    maxRequestBodyBytes: 0
    maxResponseBodyBytes: 0
    memRequestBodyBytes: 0
