apps/harbor/ingressroute-core.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-core
  namespace: harbor
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`harbor.k8s.io`)
      kind: Rule
      services:
        - name: harbor-core
          port: 80
          serversTransport: harbor-transport
      middlewares:
        - name: harbor-upload
        

  tls:
    secretName: harbor-tls
